<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="error_message">Something\'s going wrong…</string>
    <string name="title_find_tickets">Поиск дешёвых\nавиабилетов</string>
    <string name="search_icon_description">Search icon</string>
    <string name="from_field_hint">Откуда - Москва</string>
    <string name="to_field_hint">Куда - Турция</string>
    <string name="under_develop">Under develop</string>
    <string name="funny_title">Музыкально отлететь</string>
    <string name="point_image">Point image</string>
    <string name="flight_icon">Flight icon</string>
    <string name="select_takeoff_date">Выберите дату вылета</string>
    <string name="select_comeback_date">Выберите дату возвращения</string>
    <string name="comeback_the_word">обратно</string>
    <string name="add_comeback_date">Add comeback date</string>
    <string name="passengers_icon">Passengers icon</string>
    <string name="pass_count_and_class">1,эконом</string>
    <string name="filters_icon">Filters icon</string>
    <string name="filters_the_word">фильтры</string>
    <string name="straight_ways">Прямые рельсы</string>
    <string name="takeoff_date_example">24 фев</string>
    <string name="takeoff_week_day_example">, сб</string>
    <string name="week_day">, %1$s</string>
    <string name="show_all_tickets">Посмотреть все билеты</string>
    <string name="back_button">Back button</string>
</resources>