<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_fields"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/sixteen_dp"
    app:cardBackgroundColor="@color/color_2f3035"
    app:cardCornerRadius="@dimen/sixteen_dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_back_arrow_24"
            android:paddingStart="@dimen/eight_dp"
            android:defaultFocusHighlightEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/search_icon_description" />

        <TextView
            android:id="@+id/from_field"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_icon"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.AppTheme.UnderlinedTextField"
            android:defaultFocusHighlightEnabled="false"
            tools:text="@string/from_field_hint" />

        <ImageView
            android:id="@+id/reverse_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_reverse_24"
            android:paddingEnd="@dimen/eight_dp"
            app:layout_constraintEnd_toEndOf="@id/line"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/line"
            android:contentDescription="@string/search_icon_description" />

        <View
            android:id="@+id/line"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/one_dp"
            app:layout_constraintStart_toEndOf="@id/back_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/from_field"
            android:background="@color/color_5e5f61"
            android:layout_marginHorizontal="@dimen/sixteen_dp"
            />

        <TextView
            android:id="@+id/to_field"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintStart_toEndOf="@id/back_icon"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.AppTheme.UnderlinedTextField"
            tools:text="@string/to_field_hint" />

        <ImageView
            android:id="@+id/clear_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_clear_24"
            android:paddingEnd="@dimen/eight_dp"
            app:layout_constraintEnd_toEndOf="@id/line"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/search_icon_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>